--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: mjt91
+title: MJT91
 email: mjt91@omg.lol
 description: >- # this means to ignore newlines until "baseurl:"
   mjt91 checking in. I write about data science, python, time series & forecasting,
@@ -33,6 +33,7 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-archives
+  - jekyll-include-cache
 
 # Exclude from processing.
 # The following items will not be processed, by default.
