explude vendor for GH workflow

--- a/_config.yml
+++ b/_config.yml
@@ -52,11 +52,11 @@ exclude:
   - gemfiles/
   - Gemfile
   - Gemfile.lock
-  # - node_modules/
-  # - vendor/bundle/
-  # - vendor/cache/
-  # - vendor/gems/
-  # - vendor/ruby/
+  - node_modules/
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
 
 # Minima: custom header links
 header_pages:
