--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@
 title: mjt91
 email: mjt91@omg.lol
 description: >- # this means to ignore newlines until "baseurl:"
-  MJT91 here. I currently work in Finance where I manily build forecasting 
-  systems using statistical methods or machine learning. 
+  MJT91 here. I currently work in Finance where I mainly build forecasting 
+  systems using statistical methods and machine learning. 
   Occasionally I use spredsheets. 
   On here I will write about anything that comes to my mind. 
   I will try to focus on data science, python, time series & forecasting.
